--- a/projetos-angular/cadastro-de-estudante/package.json
+++ b/projetos-angular/cadastro-de-estudante/package.json
@@ -22,7 +22,8 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
-    "json-server": "^0.17.0",
+    "json": "^11.0.0",
+    "json-server": "^0.17.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
